<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="agg"
            type="com.example.calculator_for_agg.entity.AggData" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_margin="6dp"
        android:elevation="10dp"
        app:contentPadding="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nametxt"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@{agg.namesw}"
                android:layout_toEndOf="@+id/name_txt"
                android:textColor="@color/black"
                android:textSize="18sp"

                app:layout_constraintStart_toEndOf="@+id/name_txt"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Syed Faysal Hossain" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/quantity_sh"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_txt" />

            <TextView
                android:id="@+id/qnt_sh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:setQuantity="@{agg.quantity}"
                android:textColor="@color/black"
                android:textSize="18sp"

                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/name_show"
                tools:ignore="TouchTargetSizeCheck"
                tools:text="12" />


            <TextView
                android:id="@+id/rtl_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:text="@string/retail_rate"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/rtl_rate_sh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:setRetailRate="@{agg.rate}"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/rtl_rate"
                app:layout_constraintTop_toBottomOf="@+id/qnt_sh"
                tools:ignore="TextViewEdits,TouchTargetSizeCheck"
                tools:text="5.67" />

            <TextView
                android:id="@+id/tk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="Tk"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/rtl_rate_sh"
                app:layout_constraintTop_toBottomOf="@+id/qnt_sh" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rtl_rate"
                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/total_sh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:setTotalRate="@{agg.total}"
                app:layout_constraintStart_toEndOf="@+id/total"
                app:layout_constraintTop_toBottomOf="@+id/rtl_rate_sh"
                tools:text="13456.8" />

            <TextView
                android:id="@+id/tk_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/tk"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/total_sh"
                app:layout_constraintTop_toBottomOf="@+id/tk" />

            <TextView
                android:id="@+id/prft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profit"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total" />

            <TextView
                android:id="@+id/prof_sh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:setProfit="@{agg.profit}"
                app:layout_constraintStart_toEndOf="@+id/prft"
                app:layout_constraintTop_toBottomOf="@+id/total_sh"
                tools:ignore="TouchTargetSizeCheck"
                tools:text="13456.8" />

            <TextView
                android:id="@+id/tk_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/tk"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/prof_sh"
                app:layout_constraintTop_toBottomOf="@+id/tk_two" />

            <ImageButton
                android:id="@+id/delete_btn"
                android:layout_width="33dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:background="#8BC34A"
                android:src="@drawable/ic_baseline_delete_forever_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_btn"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/edit_btn"
                android:layout_width="33dp"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:background="#8BC34A"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:setDate="@{agg.date}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delete_btn"
                tools:text="12/03/2022" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:setTime="@{agg.time}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Date"
                tools:text="11:54 am" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>